# chess

./: .cproject  CMakeLists.txt  main.cpp
cmake_helpers/: helpers.cmake
include/Engine/: Engine.h  EngineConfigLoader.h
include/Engine/config/: EngineConfig.h
include/Game/: Game.h
include/Game/buttons/: WheelButton.h
include/Game/config/: GameCfg.h
include/Game/entities/: Hero.h  Wheel.h
include/Game/proxies/: GameProxy.h
include/common/: commonDefines.h
manager_utils/: CMakeLists.txt
manager_utils/include/manager_utils/config/: DrawMgrCfg.h  ManagerHandlerCfg.h  RsrcMgrCfg.h
manager_utils/include/manager_utils/drawing/: Image.h  Text.h  Widget.h
manager_utils/include/manager_utils/input/: ButtonBase.h
manager_utils/include/manager_utils/managers/: DrawMgr.h  ManagerHandler.h  MgrBase.h  RsrcMgr.h  TimerMgr.h
manager_utils/include/manager_utils/time/: TimerClient.h  TimerData.h
manager_utils/src/drawing/: Image.cpp  Text.cpp  Widget.cpp
manager_utils/src/input/: ButtonBase.cpp
manager_utils/src/managers/: DrawMgr.cpp  ManagerHandler.cpp  RsrcMgr.cpp  TimerMgr.cpp
manager_utils/src/time/: TimerClient.cpp
sdl_utils/: CMakeLists.txt
sdl_utils/include/sdl_utils/: InputEvent.h  MonitorWindow.h  Renderer.h  SDLLoader.h  Texture.h
sdl_utils/include/sdl_utils/config/: ImageContainerCfg.h  MonitorWindowCfg.h  TextContainerCfg.h
sdl_utils/include/sdl_utils/containers/: ImageContainer.h  TextContainer.h
sdl_utils/src/: InputEvent.cpp  MonitorWindow.cpp  Renderer.cpp  SDLLoader.cpp  Texture.cpp
sdl_utils/src/containers/: ImageContainer.cpp  TextContainer.cpp
src/Engine/: Engine.cpp  EngineConfigLoader.cpp
src/Game/: Game.cpp
src/Game/buttons/: WheelButton.cpp
src/Game/entities/: Hero.cpp  Wheel.cpp
utils/: CMakeLists.txt
utils/include/utils/Time/: Time.h
utils/include/utils/drawings/: Color.h  DrawParams.h  Point.h  Rectangle.h
utils/include/utils/input/: EventDefines.h
utils/include/utils/thread/: ThreadUtils.h
utils/src/Time/: Time.cpp
utils/src/drawings/: Color.cpp  DrawParams.cpp  Point.cpp  Rectangle.cpp
utils/src/thread/: ThreadUtils.cpp
